--- a/web/register.html
+++ b/web/register.html
@@ -49,7 +49,7 @@
 <body>
 
 
-<form name="form" action="RegisterServlet" method="post">
+<form name="form" action="RegisterStudentServlet" method="post">
     <table width="900" height="200" align="center" border="1">
         <tr>
             <td>
